[project]
name = "multi-agent-rag-chatbot-with-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.3.1",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
]
